@@ -1,0 +1,56 @@
+#--
+# Copyright (c) 2008 Philip Ross
+# 
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+# 
+# The above copyright notice and this permission notice shall be included in all
+# copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+# THE SOFTWARE.
+#++
+
+require 'date'
+require 'rational'
+
+module TZInfo
+  
+  # Methods to support different versions of Ruby.
+  module RubyCoreSupport #:nodoc:
+  
+    # Use Rational.new! for performance reasons in Ruby 1.8.
+    # This has been removed from 1.9, but Rational performs better.        
+    if Rational.respond_to? :new!
+      def self.rational_new!(numerator, denominator = 1)
+        Rational.new!(numerator, denominator)
+      end
+    else
+      def self.rational_new!(numerator, denominator = 1)
+        Rational(numerator, denominator)
+      end
+    end
+    
+    # Ruby 1.8.6 introduced new! and deprecated new0.
+    # Ruby 1.9.0 removed new0.
+    # We still need to support new0 for older versions of Ruby.
+    if DateTime.respond_to? :new!
+      def self.datetime_new!(ajd = 0, of = 0, sg = Date::ITALY)
+        DateTime.new!(ajd, of, sg)
+      end
+    else
+      def self.datetime_new!(ajd = 0, of = 0, sg = Date::ITALY)
+        DateTime.new0(ajd, of, sg)
+      end
+    end
+  end
+end
